--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "typeorm": "typeorm-ts-node-esm",
+    "typeorm": "ts-node-dev node_modules/.bin/typeorm",
+    "migration:run": "npm run typeorm -- migration:run -d src/db/config.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/db/config.ts",
     "start": "ts-node-dev --respawn --transpile-only src/main.ts",
     "test": "jest --passWithNoTests --no-cache --runInBand",
-    "test:watch": "npm t -- --watch",
-    "test:staged": "npm t -- --findRelatedTests",
-    "test:coverage": "npm t -- --coverage",
-    "test:integration": "npm t -- --config ./jest.integration.config.js"
+    "test:watch": "npm run test -- --watch",
+    "test:staged": "npm run test -- --findRelatedTests",
+    "test:coverage": "npm run test -- --coverage",
+    "test:integration": "npm run test -- --config ./jest.integration.config.js"
   },
   "repository": {
     "type": "git",
