--- a/db.env.example
+++ b/db.env.example
@@ -1,3 +1,3 @@
-POSTGRES_USER=value
-POSTGRES_PASSWORD=value
-POSTGRES_DB=value
+POSTGRES_USER="user"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_DB="user"
