--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ on:
  push:
    branches:
      - main
+     - develop
+     - config/ci-cd
 jobs:
   sonarcloud:
     name: SonarCloud
@@ -20,3 +22,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps: Build docker image
+      - name: print
+        run: echo $IMAGE_TAG
+      - name: Setup
+        uses: docker/setup-buildx-action@v2
+      - name: Docker login
+        uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKER_USER }}
+            password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: alectrion/repo:$IMAGE_TAG
