--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,17 +27,5 @@ jobs:
     environment: develop
     runs-on: ubuntu-latest
     steps:
-      - name: show TAG
-        run: echo ${{secrets.IMAGE_TAG}}
-      - name: Setup
-        uses: docker/setup-buildx-action@v2
-      - name: Docker login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: alectrion/repo:${{secrets.IMAGE_TAG}}
+      - uses: actions/checkout@v2
+      - uses:  ./.github/workflows/deploy.yml
