reafactor: formata yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,5 +26,5 @@ jobs:
     name: Deploy
     environment: develop
     steps:
-      uses: ./.github/workflows/action.yml
-      secrets: inherit
+      - uses: ./.github/workflows/action.yml
+        secrets: inherit
