--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,6 @@ jobs:
   deploy:
     name: Deploy
     environment: develop
+    runs-on: ubuntu-latest
     steps:
       - uses: ./.github/workflows/action.yml
