--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,30 +2,45 @@ name: Build
 on:
  push:
    branches:
-     - main
-     - develop
      - config/ci-cd
+     - develop
+ pull_request:
+  branches:
+     - main
 jobs:
-  # sonarcloud:
-  #   name: SonarCloud
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0 
-  #     - name: Install dependencies
-  #       run: yarn
-  #     - name: Test and coverage
-  #       run: yarn test:coverage
-  #     - name: SonarCloud Scan
-  #       uses: SonarSource/sonarcloud-github-action@master
-  #       env:
-  #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  #         SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
+  sonarcloud:
+    if: github.ref == 'refs/heads/develop'
+    name: SonarCloud
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 
+      - name: Install dependencies
+        run: yarn
+      - name: Test and coverage
+        run: yarn test:coverage
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
+
   deploy:
-    name: Deploy
-    environment: develop
+    name: Image deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/workflows/action.yml
+      - name: Setup
+        uses: docker/setup-buildx-action@v2
+      - name: Docker login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: alectrion/repo:${{secrets.IMAGE_TAG}}
