refactor: adiciona ambiente

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
   deploy:
     name: Image deploy
     runs-on: ubuntu-latest
+    environment: develop
     steps:
       - uses: actions/checkout@v2
       - name: Setup
