--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "migration:run": "npm run typeorm -- migration:run -d src/db/config.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d src/db/config.ts",
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
-    "test": "jest --passWithNoTests --no-cache --runInBand",
-    "test:watch": "npm run test -- --watch",
+    "test": "jest --passWithNoTests --noStackTrace --runInBand",
+    "test:watch": "npm run test  -- --watch",
+    "test:unit": "npm test -- --watch -c jest-unit-config.ts",
     "test:staged": "npm run test -- --findRelatedTests",
-    "test:coverage": "CI=true npm run test -- --coverage",
+    "test:coverage": "CI=true npm run test -- --coverage --watchAll",
     "test:integration": "npm run test -- --config ./jest.integration.config.js"
   },
   "repository": {
@@ -43,19 +44,21 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
-    "jest": "^28.1.3",
+    "jest": "^27.3.1",
     "jest-mock-extended": "^2.0.7",
     "prettier": "^2.7.1",
     "prettier-config-standard": "^5.0.0",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/faker": "5.5.9",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "faker": "5.5.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.7"
