--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,4 @@ sonar.sources=src
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
 sonar.coverage.exclusions=dist/, node_modules, src/*.ts, src/db/**/*.ts,src/factories/**/*.ts, src/presentation/protocols/*.ts, src/repository/userRepository.ts, src/**/*.spec.ts, public, tsconfig.json
+sonar.cpd.exclusions=src/**/*.spec.ts
