Revert "Revert "Feature/edicao usuario""
This reverts commit 78b02299c6a6e85d097936d13c3050f6a17d72ef.

--- a/db.env.example
+++ b/db.env.example
@@ -1,3 +1,5 @@
-POSTGRES_USER=value
-POSTGRES_PASSWORD=value
-POSTGRES_DB=value
+POSTGRES_USER="user"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_DB="user"
+TZ="GMT-3"
+PGTZ="GMT-3"
