--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,46 +3,43 @@ on:
  push:
    branches:
      - config/ci-cd
-     - develop
- pull_request:
-  branches:
-     - main
-     - develop
+    #  - develop
+#  pull_request:
+#   branches:
+#      - main
+#      - develop
+#      - config/ci-cd
 jobs:
-  sonarcloud:
+  # sonarcloud:
+  #   name: SonarCloud
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 0 
+  #     - name: Install dependencies
+  #       run: yarn
+  #     - name: Test and coverage
+  #       run: yarn test:all
+  #     - name: SonarCloud Scan
+  #       uses: SonarSource/sonarcloud-github-action@master
+  #       env:
+  #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  #         SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
+  deploy-heroku:
+    runs-on: ubuntu-latest
+    # needs: SonarCloud
     # if: github.ref == 'refs/heads/develop'
-    name: SonarCloud
-    runs-on: ubuntu-latest
-
+    name: heroku deploy
     steps:
       - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 
         with:
-          fetch-depth: 0 
-      - name: Install dependencies
-        run: yarn
-      - name: Test and coverage
-        run: yarn test:coverage
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "alectrion-user-api"
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          usedocker: true
+          docker_build_args: |
+            DB_URL
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
-
-  deploy:
-    name: Image deploy
-    runs-on: ubuntu-latest
-    environment: develop
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup
-        uses: docker/setup-buildx-action@v2
-      - name: Docker login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: alectrion/repo:user-api-${{secrets.IMAGE_TAG}}
+          DB_URL: ${{ secrets.DB_URL }}
