--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migration:generate": "npm run typeorm -- migration:generate src/db/migrations/default -d src/db/config.ts",
     "migration:run": "npm run typeorm -- migration:run -d src/db/config.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d src/db/config.ts",
-    "start": "ts-node-dev --max_old_space_size=512 --respawn --transpile-only src/main.ts",
+    "dev": "ts-node-dev --max_old_space_size=512 --respawn --transpile-only src/main.ts",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm run test -- --watch",
     "test:staged": "npm run test -- --findRelatedTests",
