--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,31 @@
 name: Build
 on:
- push:
-   branches:
-     - config/ci-cd
-    #  - develop
-#  pull_request:
-#   branches:
-#      - main
-#      - develop
-#      - config/ci-cd
+ pull_request:
+  branches:
+     - main
+     - develop
+
 jobs:
-  # sonarcloud:
-  #   name: SonarCloud
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0 
-  #     - name: Install dependencies
-  #       run: yarn
-  #     - name: Test and coverage
-  #       run: yarn test:all
-  #     - name: SonarCloud Scan
-  #       uses: SonarSource/sonarcloud-github-action@master
-  #       env:
-  #         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  #         SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 
+      - name: Install dependencies
+        run: yarn
+      - name: Test and coverage
+        run: yarn test:all
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
   deploy-heroku:
     runs-on: ubuntu-latest
-    # needs: SonarCloud
-    # if: github.ref == 'refs/heads/develop'
+    needs: SonarCloud
+    if: github.ref == 'refs/heads/develop'
     name: heroku deploy
     steps:
       - uses: actions/checkout@v2
