--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
   deploy-heroku:
     runs-on: ubuntu-latest
     needs: SonarCloud
-    if: github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/main'
     name: heroku deploy
     steps:
       - uses: actions/checkout@v2
