--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Analysis
 on:
  pull_request:
   branches:
@@ -22,19 +22,3 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
-  deploy-heroku:
-    runs-on: ubuntu-latest
-    needs: SonarCloud
-    name: heroku deploy
-    steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "alectrion-user-api"
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
-          usedocker: true
-          docker_build_args: |
-            DB_URL
-        env:
-          DB_URL: ${{ secrets.DB_URL }}
