refactor: reajusta branch

--- a/.github/workflows/service-deploy.yml
+++ b/.github/workflows/service-deploy.yml
@@ -1,8 +1,8 @@
 name: heroku-deploy
 on:
-  push:
-    branches:
-     - config/ci-cd
+ pull_request:
+  branches:
+     - main
 
 jobs:
   deploy-heroku:
