--- a/.github/workflows/collect-metrics.yml
+++ b/.github/workflows/collect-metrics.yml
@@ -1,32 +1,11 @@
 name: collect-sonar-metric
 on:
- pull_request:
-  branches:
-    - main
+ release:
   types:
-    - closed
+    - published
 
 jobs:
-  sonarcloud:
-    if: github.event.pull_request.merged == 'true'
-    name: SonarCloud
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0 
-      - name: Install dependencies
-        run: yarn
-      - name: Test and coverage
-        run: yarn test:all
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
   merged_in_main:
-    if: github.event.pull_request.merged == 'true'
-    needs: SonarCloud
     runs-on: ubuntu-latest
     steps:
     - name: checkout
@@ -34,7 +13,7 @@ jobs:
     - name: Get metrics and commit
       run: |
         mkdir analytics-raw-data
-        curl "${{secrets.URL_METRICS}}" > analytics-raw-data/fga-eps-mds-2022-1-Alectrion-UserAPI-$(date +'%m-%d-%Y-%H-%M-%S')-${{github.event.issue.number}}.json
+        curl "${{secrets.URL_METRICS}}" > analytics-raw-data/fga-eps-mds-2022-1-Alectrion-UserAPI-$(date +'%m-%d-%Y-%H-%M-%S')-${{github.event.release.tag_name}}.json
     - name: push metrics
       run: |
         git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
@@ -43,5 +22,5 @@ jobs:
         cp -R analytics-raw-data/*.json 2022-1-Alectrion-DOC/analytics-raw-data/
         cd 2022-1-Alectrion-DOC
         git add .
-        git commit -m "doc: adiciona metricas do ${{ github.event.repository.name }} PR ${{github.event.issue.number}} "
+        git commit -m "doc: adiciona metricas do ${{ github.event.repository.name }} release ${{github.event.release.tag_name}}"
         git push
