--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.projectKey=fga-eps-mds_2022-1-SGPTI-UserAPI
 sonar.sources=src
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
-sonar.coverage.exclusions=dist/, node_modules, public, tsconfig.json
+sonar.coverage.exclusions=dist/, node_modules, public, tsconfig.json, src/**/*.spec.ts, src/db/, src/*.ts
+sonar.cpd.exclusions=src/**/*.test.ts
