chore: add new metric

--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Get metrics and commit
       run: |
         mkdir analytics-raw-data
-        url="https://sonarcloud.io/api/measures/component?component=${{secrets.PROJECT_KEY}}&metricKeys=files,functions,complexity,comment_lines_density,duplicated_lines_density,coverage,ncloc,tests,test_errors,test_failures,test_execution_time,security_rating&pullRequest=${{github.event.pull_request.number}}"
+        url = "https://sonarcloud.io/api/measures/component_tree?component=${{secrets.PROJECT_KEY}}&metricKeys=files,functions,complexity,comment_lines_density,duplicated_lines_density,coverage,ncloc,tests,test_errors,test_failures,test_execution_time,test_success_density,security_rating&pullRequest=${{github.event.pull_request.number}}&qualifiers=FIL,TRK,UTS,DIR&strategy=all"
         curl $(echo $url | tr -d \') > analytics-raw-data/fga-eps-mds-2022-1-Alectrion-UserAPI-$(date +'%m-%d-%Y-%H-%M-%S')-${{github.event.pull_request.number}}.json
     - name: push metrics
       run: |
