add env example.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-DB_HOST=db
-DB_USER=user
-DATABASE=user
-DB_PASS="postgres"
-DB_PORT=5432
-SECRET_JWT= mysecret
+DB_URL='postgres://user:postgres@db:5432/user'
+PORT=4001
+SECRET_JWT= 95dbfe2790ed50cedae427abc8a49aef
