--- a/db.env.example
+++ b/db.env.example
@@ -1,5 +1,3 @@
-POSTGRES_USER="user"
-POSTGRES_PASSWORD="postgres"
-POSTGRES_DB="user"
-TZ="GMT-3"
-PGTZ="GMT-3"
+POSTGRES_USER=user
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=user
