refactor: adjust db migrations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,5 @@ services:
       - ./:/app
     ports:
       - 4001:4001
-    command: bash -c "yarn && yarn dev"
+    command: bash -c "yarn && yarn migration:run && yarn dev"
 
