--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -37,7 +37,7 @@ jobs:
         git config --global user.email "${{secrets.GIT_USER_EMAIL}}"
         git config --global user.name "${{secrets.GIT_USER_NAME}}"
         git clone --single-branch --branch main "https://x-access-token:${{secrets.API_TOKEN_GITHUB}}@github.com/fga-eps-mds/2022-2-Alectrion-DOC" 2022-2-Alectrion-DOC
-        cp -R analytics-raw-data/*.json 2022-2-Alectrion-DOC/analytics-raw-data/
+        cp -R analytics-raw-data/*.json 2022-2-Alectrion-DOC/
         cd 2022-2-Alectrion-DOC
         git add .
         git commit -m "doc: adiciona metricas do ${{ github.event.repository.name }} PR #${{github.event.pull_request.number}}"
